--- a/package.json
+++ b/package.json
@@ -33,17 +33,17 @@
     ]
   },
   "dependencies": {
-    "@apollo/client": "^3.11.4",
+    "@apollo/client": "^3.11.7",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.0.1",
+    "@mui/icons-material": "^6.0.2",
     "@mui/lab": "^6.0.0-beta.8",
-    "@mui/material": "^6.0.1",
+    "@mui/material": "^6.0.2",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.6",
+    "axios": "^1.7.7",
     "graphql": "^16.9.0",
     "graphql-ws": "^5.16.0",
     "jwt-decode": "^4.0.0",
@@ -68,9 +68,10 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.35.2",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "typescript": "^4.9.5",
