--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "build": "react-scripts build",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier . --write",
