--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "graphql": "^16.9.0",
     "graphql-ws": "^5.16.0",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.0",
     "web-vitals": "^2.1.4"
@@ -56,9 +57,9 @@
     "@graphql-codegen/cli": "^5.0.3",
     "@graphql-codegen/client-preset": "^4.4.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
@@ -68,6 +69,6 @@
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
     "typescript": "^4.9.5",
-    "typescript-eslint": "^8.8.1"
+    "typescript-eslint": "^8.9.0"
   }
 }
